--- a/css/styles.css
+++ b/css/styles.css
@@ -32,26 +32,28 @@ h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 0 20px;
 }
+h1{
+    color: white;
+    font-size: 2em;
+}
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 #maincontent {
   background-color: #f3f3f3;
-  min-height: 100%;
 }
 #footer {
   background-color: #444;
   color: #aaa;
   font-size: 8pt;
-  letter-spacing: 1px;
-  padding: 25px;
+  margin: auto;
   text-align: center;
   text-transform: uppercase;
 }
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
+  height: 5em;
   background-color: #252831;
   text-align:center;
 }
@@ -99,7 +101,7 @@ nav h1 a {
 }
 /* ====================== Map ====================== */
 #map {
-  height: 400px;
+  height: 100%;
   width: 100%;
   background-color: #ccc;
 }
@@ -186,12 +188,13 @@ nav h1 a {
 .inside header {
   position: fixed;
   top: 0;
+  height: 13%;
   width: 100%;
   z-index: 1000;
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
+  height: 100%;
   position: fixed;
   right: 0;
   top: 80px;
@@ -272,4 +275,274 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+
+/*==================Responsive CSS  for index.html and restaurant.html=============================*/
+html,
+body,
+#restaurant #inside,
+#restaurant{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+body,
+#maincontent, 
+.inside,
+.inside #maincontent{
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+}
+nav{
+    height: 100%;
+}
+header,
+main,
+footer{
+width: 100%;
+margin: 0;
+}
+
+.inside,
+#restaurant{
+    width: 100%;
+    height: 100%;
+}
+
+#map,
+#map-container{
+    height: 100%;
+    width: 100%;
+}
+
+#footer,
+.inside #footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+
+@media screen and (max-width: 425px){
+    /*hide everything except for the map*/
+    #filter,
+    #footer{
+        display: none;
+    }
+    #firstmap{
+        height: 100%;
+        width: 100%;
+    }
+    #map{
+        height: 100%;
+    }
+    header{
+        order: 0;
+        height: 13%;
+    }
+    #maincontent{
+        order: 1;
+        height: 90%;
+    }
+
+     /*=====restaurant response css=====*/
+     .inside #heading{
+        height: 13%;
+        width: 100%;
+        order: 0;
+    }
+    h1{
+        font-size: 1em;
+    }
+    #breadcrumb{
+        display: none;
+    }
+    .inside #maincontent{
+        order: 1;
+        width: 100%;
+        height: 90%;
+        overflow: scroll;
+        margin-top: .25em;
+        padding-left: 1em;
+        margin-left: 0;
+    }
+    .inside #footer{
+        display: block;
+        order: 2;
+        width: 100%;
+        height: 10%;
+    }
+    /*====inside content of restaurant.html=======*/
+    .inside #maincontent #map-container{
+        order: 0;
+        width: 100%;
+        height: 33%;
+        margin: 0, auto;
+        padding: 0;
+        display: block;
+        z-index: 1;
+    }
+    .inside #maincontent #restaurant-container{
+        order: 1;
+        width: 100%;
+        height: 33%;
+        margin-top: 25em;
+        margin-left: 1em;
+        padding: 0;
+        display: block;
+    }
+    .inside #maincontent #reviews-container{
+        order: 2;
+        width: 100%;
+        height: 33%;
+        margin-top: 25em;
+        margin-left: 1em;
+        padding-left: 0;
+        padding-top: 2em;
+        display: block;
+        z-index: 0;
+    }
+    
+}
+    
+@media screen and (min-width: 768px){
+    html,
+    body{
+        height: 100%;
+    }
+    header{
+        order: 0;
+        height: 13%;
+        width: 100%;
+    }
+    #maincontent{
+        order: 1;
+        height: 80%;
+        width: 100%;
+    }
+    #footer{
+        order: 2;
+        height: 10%;
+        width: 100%;
+    }
+    .map-container{
+        order: 1;
+        width: 100%;
+        height: 60%;
+        margin: 0;
+    }
+    #filter{
+        order: 2;
+        height: 40%;
+        width: 100%;
+        margin: 0;
+    }
+    /*==============Restaurant.html========================*/
+    .inside #heading{
+        height: 13%;
+        width: 100%;
+        order: 0;
+    }
+    .inside #maincontent{
+        order: 1;
+        width: 100%;
+        height: 80%;
+    }
+    .inside #footer{
+        display: block;
+        order: 2;
+        width: 100%;
+        height: 10%;
+        margin: 0;
+    }
+    .inside #maincontent #restaurant-container{
+        width: 37%;
+        height: 40%;
+        order: 0;
+    }
+    .inside #maincontent #restaurant-review{
+        width: 37%;
+        height: 40%;
+        order: 1;
+        padding: 0;
+    }
+    .inside #maincontent #map-container{
+        width: 39.5%;
+        height: 100%;
+        order: 2;
+        padding: 0;
+        margin: 0;
+    }
+}
+
+@media screen and (min-width: 1024px){
+    /* ============Index.html================ */
+    html,
+    body{
+        height: 100%;
+    }
+    header{
+        order: 0;
+        height: 13%;
+        width: 100%;
+    }
+    #maincontent{
+        order: 1;
+        height: 100%;
+        width: 100%;
+    }
+    #footer{
+        order: 2;
+        height: 10%;
+        width: 100%;
+    }
+    .map-container{
+        order: 1;
+        width: 100%;
+        height: 60%;
+        margin: 0;
+    }
+    #filter{
+        order: 2;
+        height: 40%;
+        width: 100%;
+        margin: 0;
+    }
+    /*=====Restaurant.html=======*/
+    .inside #heading{
+        height: 13%;
+        width: 100%;
+        order: 0;
+    }
+    .inside #maincontent{
+        order: 1;
+        width: 100%;
+        height: 80%;
+        margin: 0;
+    }
+    .inside #footer{
+        order: 2;
+        width: 100%;
+        height: 10%;
+        margin: 0;
+    }
+    .inside #maincontent #restaurant-container{
+        width: 50%;
+        height: 50%;
+        order: 0;
+        margin-bottom: 35%;
+    }
+    .inside #maincontent #restaurant-review{
+        width: 50%;
+        height: 50%;
+        order: 1;
+        margin: 0;
+    }
+    .inside #map-container{
+        width: 50%;
+        height: 90%;
+        order: 2;
+        margin: 0;
+    } 
 }
