--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,9 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #footer {
   background-color: #444;
   color: #aaa;
-  font-size: 8pt;
+  font-size: 12pt;
+  letter-spacing: 1px;
+  padding: 25px;
   margin: auto;
   text-align: center;
   text-transform: uppercase;
@@ -138,6 +140,9 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 #restaurants-list li {
   background-color: #fff;
